--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -4,12 +4,12 @@
 .display-2 {
   margin-bottom: 1rem;
   text-transform: capitalize;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 
   &--intro {
     display: inline-block;
     font-weight: 700;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat', sans-serif;
   }
 
   &--descr {
@@ -48,13 +48,13 @@
 
 // display 3
 .display-3 {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 
   &--title {
     font-size: 1.2rem;
     text-transform: capitalize;
     font-weight: 600;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     display: inline-block;
     // градиент по тексту
     background-image: linear-gradient(to right, $primary, $secondary);
