--- a/scss/sections/_intro.scss
+++ b/scss/sections/_intro.scss
@@ -21,6 +21,10 @@
         }
       }
     }
+
+    @include media-breakpoint-down(md) {
+      display: none;
+    }
   }
 }
 
