--- a/scss/sections/_portfolio.scss
+++ b/scss/sections/_portfolio.scss
@@ -8,6 +8,13 @@
     text-transform: capitalize;
   }
 }
+
+.filter {
+  button {
+    margin-bottom: 0.5rem;
+  }
+}
+
 .portfolio-box {
   position: relative;
   width: 100%;
